# ai-chess

./: .gitignore  main.c  oedvkz0j.3ht.txt  partners.txt  v4zgyn3z.d2d.txt
02/: CMakeLists.txt  main.c  main_aux.c  main_aux.h  partners.txt  sp_nim.c  sp_nim.h
03/: CMakeLists.txt  SPArrayList.c  SPArrayList.h  SPArrayListUnitTest.c  SPFAIRParser.c  SPFAIRParser.h  SPFAIRParserUnitTest.c  SPFIAR  SPFIARGame.c  SPFIARGame.h  SPFIARGameUnitTest  SPFIARParser.c  SPFIARParser.h  SPFIARParserUnitTest  SPFIARParserUnitTest.c  SPMainAux.c  SPMainAux.h  SPMiniMax.c  SPMiniMax.h  SPMiniMaxNode.c  SPMiniMaxNode.h  main.c  partners.txt
project/: CMakeLists.txt  CommandParsing.c  CommandParsing.h  GameAux.c  GameAux.h  GameMoves.c  GameMoves.h  GameRepresenation.c  GameRepresenation.h  GameRepresentation.c  GameStates.c  GameStates.h  MatchManagement.c  MatchManagement.h  Matrix.c  Matrix.h  MinMaxNode.c  MinMaxNode.h  MinMaxTree.c  MinMaxTree.h  MovesStack.c  MovesStack.h  PieceRules.c  PieceRules.h  SPCommon.c  SPCommon.h  SPSimpleMainWindow.c  SPSimpleMainWindow.h  SPWindow.h  Scoring.c  Scoring.h  SimpleButton.c  SimpleButton.h  Widget.c  Widget.h  XMLLoadParser.c  XMLLoadParser.h  XMLParser.c  XMLParser.h  XMLSaveParser.c  (+13 more)
project/gui/: ColorWindow.c  ColorWindow.h  DifficultyWindow.c  DifficultyWindow.h  GameAuxGUI.c  GameAuxGUI.h  GameWindow.c  GameWindow.h  GenericWindow.c  GenericWindow.h  GuiManager.c  GuiManager.h  LoadGamesWindow.c  LoadGamesWindow.h  PiecesWidget.c  PiecesWidget.h  SettingsWindow.c  SettingsWindow.h  WelcomeWindow.c  WelcomeWindow.h  Widget.c  Widget.h  WindowNode.c  WindowNode.h  WindowsStack.c  WindowsStack.h  config.h
project/saved_games/: game_slot1.xml  game_slot2.xml  game_slot3.xml  game_slot4.xml  game_slot5.xml
project/tests_console_mode/: student_test_bonus2.out
